--- a/index.mdx
+++ b/index.mdx
@@ -1,71 +1,22 @@
+# Welcome to The Slow Net API Documentation
+
+This documentation provides a comprehensive guide on how to programmatically interact with your Slow Net account and its unique features using secure API keys. Whether you're building custom integrations, automating tasks, or simply exploring, our API is designed to be developer-friendly and efficient.
+
+The Slow Net is a calm-tech platform focused on deep thinking, digital minimalism, and reclaiming attention. Our API extends this philosophy, allowing you to manage your digital presence with precision and control.
+
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+
+## What You Can Do with the API
+
+* **Account Management:** Retrieve and update your SlowNet display name.
+* **Email Forwarding:** Check status and toggle your private email alias.
+* **Discord Slowhooks:** Send and edit rich messages to your Discord servers.
+* **Site Configuration:** Get and update your public SlowNet page's content, appearance, and visibility.
+
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+## Getting Started
 
-## Setting up
+To begin using the API, follow our [Quickstart Guide](/quickstart) which covers API key generation, authentication, and making your first request.
 
-The first step to world-class documentation is setting up your editing environments.
-
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+If you have any questions or feedback, please reach out to our team via the [dashboard support section](https://theslow.net/dashboard#support) or join our [Discord community](https://discord.gg/89MvXCAT3F).
