--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,33 +1,33 @@
+# API Reference
+
+Welcome to the comprehensive API Reference for The Slow Net. Here you will find detailed information about each available endpoint, including its purpose, authentication requirements, request parameters, and example responses.
+
+All API endpoints are accessible via `https://theslow.net/api/`.
+
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
----
-
-<Note>
-  If you're not looking to build API reference documentation, you can delete
-  this section by removing the api-reference folder.
-</Note>
-
-## Welcome
-
-There are two ways to build API documentation: [OpenAPI](https://mintlify.com/docs/api-playground/openapi/setup) and [MDX components](https://mintlify.com/docs/api-playground/mdx/configuration). For the starter kit, we are using the following OpenAPI specification.
-
-<Card
-  title="Plant Store Endpoints"
-  icon="leaf"
-  href="https://github.com/mintlify/starter/blob/main/api-reference/openapi.json"
->
-  View the OpenAPI specification file
-</Card>
 
 ## Authentication
 
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
+All API requests must be authenticated using an API key provided in the `X-API-Key` HTTP header. For more details, refer to the [Quickstart Guide](/quickstart).
 
-```json
-"security": [
-  {
-    "bearerAuth": []
-  }
-]
-```
+---
+
+## Available API Categories
+
+Explore the following categories to find the endpoints relevant to your needs:
+
+### [Account Management](/api-reference/account)
+Manage your basic user profile information, such as your display name.
+
+### [Email Forwarding](/api-reference/email-forwarding)
+Control your private email alias and its forwarding destination.
+
+### [Discord Webhooks](/api-reference/discord-webhooks)
+Send and manage messages to your Discord server using Slowhooks.
+
+### [Site Configuration](/api-reference/site-configuration)
+Programmatically update your public SlowNet page's content, appearance, and visibility.
+
+---
+
+Click on any of the links above or use the sidebar navigation to dive into the details of each API.
