--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,97 +1,80 @@
+# Quickstart Guide
+
+This guide will walk you through the essential steps to get started with The Slow Net API.
+
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+
+## 1. Generate Your API Key
+
+All API requests to The Slow Net require an API key for authentication. You can generate and manage your API keys directly from your dashboard.
+
+1.  **Log in to your Slow Net dashboard:**
+    [Go to your Dashboard](https://theslow.net/dashboard)
+
+2.  **Navigate to the "Settings" section** at the bottom of the page.
+
+3.  **Find the "API Keys" subsection.**
+
+4.  **Enter an optional "New API Key Name"** (e.g., "My Automation Script") to help you identify its purpose later.
+
+5.  **Click the "Generate New Key" button.**
+
+6.  **Copy the entire API key immediately!** It will be displayed in a yellow box and will be in the format `UUID.SECRET_STRING` (e.g., `a1b2c3d4-e5f6-7890-1234-567890abcdef.your-long-secret-string`).
+    **Important:** For security reasons, the full secret part of the key is only shown once. Make sure to store it securely.
+
 ---
 
-## Setup your development
+## 2. Authenticate Your Requests
 
-Learn how to update your docs locally and deploy them to the public.
+To authenticate your API requests, you must include your full API key in a custom HTTP header: `X-API-Key`.
 
-### Edit and preview
+### Header Format
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 
-    1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `docs.json` is): ``` mintlify dev ```
-    <Note>
-      If you’re currently using the legacy ```mint.json``` configuration file, please update the Mintlify CLI:
+```
+X-API-Key: UUID.SECRET_STRING
+```
 
+### Example
 
-      ```npm i -g mintlify@latest```
-      And run the new upgrade command in your docs repository:
+Here's how you would include your API key in a `curl` request:
 
-      ```mintlify upgrade```
-      You should now be using the new ```docs.json``` configuration file. Feel free to delete the ```mint.json``` file from your repository.
-    </Note>
-  </Accordion>
-</AccordionGroup>
+```bash copy
+curl -X GET \
+  -H "X-API-Key: a21894a7-dcb3-4d1a-8ddb-4e9f0585baf4.2500e47bc30423f50967f8d1f38e8d4acba659c607a7a6741693c7515f4c04ab" \
+  [https://theslow.net/api/account/get-display-name](https://theslow.net/api/account/get-display-name)
+```
 
-### Deploy your changes
+**Base URL:** All API endpoints are relative to `https://theslow.net/api/`. For local development, use `http://localhost:3000/api/`.
 
-<AccordionGroup>
+---
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+## 3. Understanding API Responses
 
-</AccordionGroup>
+The API will return JSON responses.
 
-## Update your docs
+### Success Responses (2xx Status Codes)
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+Successful requests will typically return a `200 OK` status code and a JSON object with the requested data.
 
-<CardGroup>
+```json
+{
+  "status": "success",
+  "data": {
+    "some_field": "value"
+  }
+}
+```
 
-<Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
-  Add content to your docs with MDX syntax.
-</Card>
+### Error Responses (4xx and 5xx Status Codes)
 
-<Card
-  title="Add Code Blocks"
-  icon="square-code"
-  href="/essentials/code"
->
-  Add code directly to your docs with syntax highlighting.
-</Card>
+Errors will return an appropriate HTTP status code (e.g., `400 Bad Request`, `401 Unauthorized`, `404 Not Found`, `500 Internal Server Error`) and a JSON object with an `error` message.
 
-<Card
-  title="Add Images"
-  icon="image"
-  href="/essentials/images"
->
-  Add images to your docs to make them more engaging.
-</Card>
+```json
+{
+  "error": "A descriptive error message explaining what went wrong."
+}
+```
 
-<Card
-  title="Add Custom Components"
-  icon="puzzle-piece"
-  href="/essentials/reusable-snippets"
->
-  Add templates to your docs to make them more reusable.
-</Card>
+---
 
-</CardGroup>
+You are now ready to explore the specific API endpoints in the [API Reference](/api-reference/index) section!
