--- a/index.mdx
+++ b/index.mdx
@@ -1,22 +1,23 @@
-# Welcome to The Slow Net API Documentation
+# Welcome to The Slow Net API
+Welcome to the official API documentation for The Slow Net!
 
-This documentation provides a comprehensive guide on how to programmatically interact with your Slow Net account and its unique features using secure API keys. Whether you're building custom integrations, automating tasks, or simply exploring, our API is designed to be developer-friendly and efficient.
-
-The Slow Net is a calm-tech platform focused on deep thinking, digital minimalism, and reclaiming attention. Our API extends this philosophy, allowing you to manage your digital presence with precision and control.
-
----
+At The Slow Net, we believe in a philosophy of digital minimalism, calm-tech, and reclaiming attention. Our platform is designed to help you create a focused and intentional online presence. The Slow Net API extends this philosophy by providing programmatic access to manage your account and site features, allowing you to integrate our services seamlessly into your own applications and workflows.
 
 ## What You Can Do with the API
+The Slow Net API empowers you to:
 
-* **Account Management:** Retrieve and update your SlowNet display name.
-* **Email Forwarding:** Check status and toggle your private email alias.
-* **Discord Slowhooks:** Send and edit rich messages to your Discord servers.
-* **Site Configuration:** Get and update your public SlowNet page's content, appearance, and visibility.
+- Manage Your Account: Retrieve and update your display name.
 
----
+- Control Email Forwarding: Programmatically toggle your email forwarding status.
+
+- Automate Discord Slowhooks: Send and edit messages to your Discord webhooks, perfect for notifications and integrations.
+
+- Configure Your Site: Get and update your site's visibility, biography, avatar, theme, and content blocks.
+
+## Authentication
+For all authenticated requests, you will need an API Key. This key is a ``UUID.SECRET_STRING`` that you can generate directly from your Slow Net dashboard. It must be sent in the ``X-API-Key`` HTTP header for every authenticated request.
 
 ## Getting Started
+Ready to dive in? Head over to our [Quickstart Guide](quickstart) to learn how to obtain your API key and make your first API call.
 
-To begin using the API, follow our [Quickstart Guide](/quickstart) which covers API key generation, authentication, and making your first request.
-
-If you have any questions or feedback, please reach out to our team via the [dashboard support section](https://theslow.net/dashboard#support) or join our [Discord community](https://discord.gg/89MvXCAT3F).
+For a comprehensive overview of all available endpoints, explore the [API Reference](/api-reference/introduction).
